# civretro

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  deploy-mod.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  vitest.workspace.ts
app/: README.md  package.json
docs/: typescript-style.md
fixtures/traces/: 20260620_220841_25t_2p_baseline-a.ndjson  20260620_223459_25t_2p_baseline-b.ndjson  20260621_003428_25t_4p_validation-a.ndjson
mod/civretro/: civretro.modinfo
mod/civretro-harness/: README.md
mod/civretro-harness/ui/: autoplay-harness.js
mod/civretro-probe/: civretro-probe.modinfo
mod/civretro-probe/ui/: api-dump.js
mod/civretro/ui/: recorder.js
mods/civretro-harness/: README.md  civretro-harness.modinfo
mods/civretro-harness/ui/: autoplay-harness.js
mods/civretro-probe/ui/: api-dump.js
mods/civretro/ui/: probe.js
parser/: analyze.py
saves/: ConfuciusAnt100.Civ7Save
shared/exporter/: package.json  tsconfig.json  vitest.config.ts
shared/exporter/src/: cli.ts  db.ts  export.test.ts  export.ts
shared/launcher/: package.json
shared/launcher/src/: cdp.ts  cli.ts  (+5 more)
shared/parser/: package.json
shared/types/: package.json
src/civretro/: cdp.py  launcher.py  log.py  queries.py
tools/: read_localstorage.py  run_game.py  run_harness.sh
tools/driver/: package-lock.json  package.json
tools/traces/: 20260620_221510_25t_2p_baseline-b.ndjson  20260620_235501_20t_4p.ndjson  20260621_004130_5t_2p_val-a.ndjson
viewer/: AGENTS.md  biome.json  package.json  tsconfig.json
(+17 files in other folders)
