[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civretro"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
]

[project.scripts]
run-game = "civretro.launcher:main_cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/civretro"]

[tool.uv]
package = true
